# Proyecto_Facturacion

Facturacion/: CMakeLists.txt  iniciosesion.cpp  iniciosesion.h  iniciosesion.ui  main.cpp
ProyectoFacturacion/: CMakeLists.txt  cliente.cpp  cliente.h  clienterepo.cpp  clienterepo.h  database.cpp  database.h  frmclientes.cpp  frmclientes.h  frmclientes.ui  frmgestionarproductos.cpp  frmgestionarproductos.h  frmgestionarproductos.ui  main.cpp  manejousuario.cpp  manejousuario.h  menuprincipal.cpp  menuprincipal.h  menuprincipal.ui  producto.cpp  producto.h  productorepo.cpp  productorepo.h  registroui.cpp  registroui.h  registroui.ui  tipos.h  usuario.cpp  usuario.h  usuariorepo.cpp  usuariorepo.h
